[ISSUE_61] Added Sonar and jacoco plugins, refactored UTest